kubernetes/ingress/finoku-news-ingress-rules.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: finoku-news-ingress-rules
spec:
  tls:
  - hosts:
      - news.finoku.com
    secretName: finoku-news-tls
  rules:
  - host: news.finoku.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: finoku-news-website
            port:
              number: 80
      - path: /panel
        pathType: Prefix
        backend:
          service:
            name: finoku-news-panel-service
            port:
              number: 80
      - path: /admin
        pathType: Prefix
        backend:
          service:
            name: finoku-news-admin-service
            port:
              number: 80
